--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
-*{
-margin:0;
-padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
- fonte-family: 'poppings', sans-serif; 
+  fonte-family: 'poppings', sans-serif;
 }
 
 .cabecalho {
-  backgroud-color:#3897cd;
+  backgroud-color: #3897cd;
   color: white;
   display: flex;
   justify-content: space-around;
   aling-items: center;
   padding: 24px 0;
-  
+
 }
 
 .cabecalho-imagem {
-  width: 10%; 
+  width: 10%;
 }
 
 .cabecalho-lista-item {
@@ -29,10 +29,62 @@ body {
 
 .cabecalho-lista-item a {
   text-decoration: nome;
-  color:white;
+  color: white;
+}
+
+.escola-imagem {
+  width: 25%;
+}
+
+#escola {
+  background-color: aqua;
+  colos: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px 0;
+}
+
+.escola-div-conteudo {
+  width: 35%
 }
 
 
+.escola-titulo {
+  padding: 24px 0;
+}
 
+#estudante {
+  padding: 24px 0;
 
+  .estudante-imagem {
+    width: 120px;
+  }
 
+  .estudante-icone {
+    width: 24px;
+    padding: 4px 8px;
+  }
+
+  .estudante-div {
+    text-align: grid;
+    padding: 16px 0;
+
+    .estudante-titulo {
+      text-align: center;
+      padding: 50px 0;
+
+      .estudante-todos {
+        display: grid;
+        grid-template-columns: 20% 20% 20% 20% 20%;
+      }
+
+      .rodape {
+        background-color: black;
+        text-align: center;
+      }
+
+      .rodape-imagem {
+        height: 60px;
+        padding: 12px 0;
+      }
