--- a/style.css
+++ b/style.css
@@ -1,90 +1,76 @@
-* {
-  margin: 0;
-  padding: 0;
+*{
+margin: 0;
+padding: 0;
 }
-
 body {
-  fonte-family: 'poppings', sans-serif;
+font-family: 'Poppins', sans-serif;
 }
-
 .cabecalho {
-  backgroud-color: #3897cd;
-  color: white;
-  display: flex;
-  justify-content: space-around;
-  aling-items: center;
-  padding: 24px 0;
-
+background-color: #424E61;
+color: white;
+display: flex;
+justify-content: space-around;
+align-items: center;
+padding: 24px 0;
+}
+.cabecalho-imagem{
+width: 10%;
+}
+.cabecalho-lista-item{
+display: inline-block;
+margin: 0 16px;
+font-size: 16px;
+}
+.cabecalho-lista-item a{
+text-decoration: none;
+color: white;
+}
+.escola-imagem{
+width: 25%;
+}
+#escola{
+background-image: linear-gradient(#424E61,#16CFF8);
+color:white;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 24px 0;
+}
+.escola-div-conteudo{
+width: 35%;
 }
 
-.cabecalho-imagem {
-  width: 10%;
+.escola-titulo{
+padding: 24px 0;
+}
+#estudante{
+padding: 24px 0;
 }
 
-.cabecalho-lista-item {
-  display: inline-block;
-  margin: 0 16px;
-  font-size: 16px;
+.estudante-imagem{
+width: 120px;
 }
-
-.cabecalho-lista-item a {
-  text-decoration: nome;
-  color: white;
+.estudante-icone{
+width: 24px;
+padding: 4px 8px;
 }
-
-.escola-imagem {
-  width: 25%;
+.estudante-div{
+text-align: center;
+padding: 16px 0;
 }
-
-#escola {
-  background-color: aqua;
-  colos: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 24px 0;
+.estudante-titulo{
+text-align: center;
+padding: 50px 0;
 }
-
-.escola-div-conteudo {
-  width: 35%
+.estudante-todos{
+display: grid;
+grid-template-columns: 20% 20% 20% 20% 20%;
 }
-
-
-.escola-titulo {
-  padding: 24px 0;
+.rodape{
+background-color: black;
+text-align: center;
 }
-
-#estudante {
-  padding: 24px 0;
-
-  .estudante-imagem {
-    width: 120px;
-  }
-
-  .estudante-icone {
-    width: 24px;
-    padding: 4px 8px;
-  }
-
-  .estudante-div {
-    text-align: grid;
-    padding: 16px 0;
-
-    .estudante-titulo {
-      text-align: center;
-      padding: 50px 0;
-
-      .estudante-todos {
-        display: grid;
-        grid-template-columns: 20% 20% 20% 20% 20%;
-      }
-
-      .rodape {
-        background-color: black;
-        text-align: center;
-      }
-
-      .rodape-imagem {
-        height: 60px;
-        padding: 12px 0;
-      }
+.rodape-imagem{
+height: 60px;
+padding: 12px 0;
+}
